--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div id="app"></div>
 
     <script src="./js/main.js"></script>
+    <script src="./js/mountApp.js"></script>
   </body>
 </html>
