Optimización de funciones

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <hr />
 
       <div>
-        <button @click="decreaseCount">-1</button>
-        <button @click="addCount">+1</button>
+        <button @click="modCount('decrease')">-1</button>
+        <button @click="modCount">+1</button>
       </div>
     </div>
 
