Metadata de PWA agregada

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Metadata de PWA -->
+    <meta name="theme-color" content="#41b883" />
+
     <title>Contador App</title>
     <link
       rel="stylesheet"
