Agregadas Optimizaciones de SEO y theme-color para ANDROID

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Metadata de PWA -->
+    <!-- Modificación color de barra de estado en ANDROID -->
     <meta name="theme-color" content="#41b883" />
+    <!-- Optimizaciones de SEO -->
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
 
     <title>Contador App</title>
     <link
