Metadata para cambiar barra de estado en IOS agregada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <!-- Optimizaciones de SEO -->
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
-
+    <!-- Modificar barra de estado en IOS -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <title>Contador App</title>
     <link
       rel="stylesheet"
