Agregue información al Manifest, su scope esta al nivel del Index.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" href="./img/favicon.png" />
     <link rel="apple-touch-startup-image" href="./img/favicon.png" />
     <!-- Manifest -->
-    <link rel="manifest" href="js/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <title>Contador App</title>
     <link
       rel="stylesheet"
