Service Worker agregado con Registro Exitoso

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button @click="modCount">+1</button>
       </div>
     </div>
-
+    <script src="./load.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/mountApp.js"></script>
   </body>
